envoyfilter-teaching/envoyfilter/break/dr-productpage-h2UpgradePolicy-DEFAULT.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    connectionPool:
      http:
        h2UpgradePolicy: DEFAULT
